[package]
name = "sqlink-host"
version = "0.1.0"
edition = "2021"
description = "Reference wasmtime-based host for SQLite-in-WebAssembly components. Implements sqlink:wasm/extension-loader using the unified sqlite:extension contract."
license = "MIT"

[[bin]]
name = "sqlink"
path = "src/main.rs"

[lib]
name = "sqlink_host"
path = "src/lib.rs"

[dependencies]
# Canonical Policy / Capability / HttpPolicy / PolicyError types,
# shared with sqlink-loader/runtimes/{wasmtime,wamr}.
sqlite-extension-policy = { path = "../sqlite-loader-wit" }

# Pure-fn parsers + spawn-build validators. Extracted so fuzz
# harnesses can import the source-of-truth without the host's
# tokio/wasmtime dep graph.
sqlink-parsers = { path = "../sqlink-parsers" }

# Shared runtime WIT contract-version load guard (also consumed by the
# ducklink host). Introspects a loaded component's imported sqlite:extension
# @MAJOR and rejects a contract-major mismatch (or unversioned/legacy)
# before instantiation -- silent-corruption protection. datalink is PUBLIC.
datalink-contract = { git = "https://github.com/tegmentum/datalink.git" }

# Shared compose:dynlink linker host (also consumed by the ducklink host).
# We use its ADDITIVE async flavor: AsyncProviderBackend + AsyncDynLinkBridge
# + impl_datalink_dynlink_async_host! + add_to_linker_async, with the instance
# resource table kept in our per-Store state. sqlink's trust gate, CAS-digest
# resolution, multi-tenancy, the fresh-store WasmComponent path, and the
# built-in SqliteRuntime shim live in our AsyncProviderBackend impls; the
# bridge routes resolve/invoke/drop to them. datalink is PUBLIC.
datalink-dynlink = { git = "https://github.com/tegmentum/datalink.git" }

# Shared, db-agnostic function-prefix namespacing (also consumed by the
# ducklink host). The prefix__name resolution algorithm + the collision/pin
# model behind a PrefixStore trait; this host backs that trait with its
# __sqlink_prefix* SQLite tables (see prefix_registry.rs). datalink is PUBLIC.
datalink-prefix = { git = "https://github.com/tegmentum/datalink.git" }

anyhow = "1.0"
wasmtime = { version = "46.0.1", features = [
    "component-model",
    "component-model-async",
    "cranelift",
    "parallel-compilation",
    "async",
    # On-disk compilation cache. Wasmtime hashes each module + the
    # compiler config and stores the compiled artifact under the
    # configured directory; subsequent `Engine::precompile_component`
    # / `Component::new` calls hit the cache. See Host::new for the
    # directory wiring (env `SQLITE_WASM_COMPILE_CACHE` or default
    # `~/.cache/sqlink/compile-cache`).
    "cache",
] }
wasmtime-wasi = "46.0.1"
# Standard wasi:http surface for loaded extensions that compose with
# upstream wasi:http components (e.g. tiger-geocoder-sqlink-bridge,
# which inlines the Census REST geocoder via wasi:http/outgoing-handler).
# Distinct from the host's custom `sqlite:extension/http` interface —
# that one is reqwest-backed and gated by `Capability::Http` + the
# per-extension http-policy; this surface satisfies the standardised
# `wasi:http/{types,outgoing-handler}` imports a guest may inherit
# transitively from a composed upstream component. Version must match
# the `wasmtime` crate version exactly. (#683)
wasmtime-wasi-http = "46.0.1"
parking_lot = "0.12"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs", "time"] }
async-trait = "0.1"
# Real http impl for the http-resolver component path. blocking to
# stay sync within the (currently sync) Host trait method body —
# the parent async call already yielded, so blocking briefly here
# is OK for v1; future revision uses async reqwest with proper
# cooperative scheduling.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
# AWS SigV4 signing for the s3-base::Host dispatcher. Used in
# concert with reqwest to talk to S3 / MinIO / Cloudflare R2 /
# any S3-compatible endpoint extensions point at. Substrate for
# PLAN-wal-archive-extension.md (#440)  the wal-archive
# extension's primary off-box sink.
#
# We use the in-host (aws-sigv4 + reqwest) strategy rather than
# composing the s3-wasm component into wasmtime because (a) the
# s3-wasm component imports wasi:http/outgoing-handler which would
# require wasmtime-wasi-http + an additional aws-sigv4 component
# instance, and (b) the WIT contract is mirrored exactly so a
# future iteration can swap implementations without touching the
# extension-facing surface.
aws-sigv4 = "1.4"
# Required by aws-sigv4 to construct the in-host credential
# identity (access-key + secret + optional session-token).
aws-credential-types = "1"
hex = "0.4"
url = "2"
# Async DNS resolver used by the host's `dns::resolve` impl for
# `Capability::Dns`-granted extensions. Same async story as reqwest;
# the Host trait method is already async, so we just `.await` it.
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
# Host-side SQLite for the hybrid SPI path + sqlite-runtime
# compose provider. Same sqlite3.c the wasm crates use — we drive
# it through `core::db` (in-tree libsqlite3-sys wrapper) so the
# host and the wasm components share one SQLite story end to end.
# Used to be `rusqlite`; dropped because (a) the host had two
# SQLite stacks and (b) every type swap was paid twice.
sqlite-component-core = { path = "../sqlite-wasm/core" }
# Direct dep so the sqlink-run binary can call the
# session/changeset FFI for its `changeset` subcommand. The
# bundled sqlite3 is compiled with SESSION via LIBSQLITE3_FLAGS
# (.cargo/config.toml); we declare sqlite3session_* / sqlite3changeset_*
# as extern "C" manually because the libsqlite3-sys `session`
# feature forces buildtime_bindgen which fails on wasm32-wasip2
# cross-compile.
libsqlite3-sys = { version = "0.38", default-features = false }
# SQLite-backed content-addressed cache for resolved extension
# components. The host's `cache` module is a thin wrapper. The
# `compose` feature lights up `SqliteCasStore: compose_core::blobs::
# BlobBackend` (sha-256 addressing) so the store plugs into the shared
# `CompileCache` exactly like the framework's `FsBlobStore`.
sqlite-cas-cache = { path = "../sqlite-cas-cache", features = ["compose"] }
# Single shared CAS trait + trust-gated `CompileCache` (HMAC seal/open
# bound to the engine identity). The precompiled-component cache
# authenticates its artifacts through this — the same trust model
# ducklink uses for its `.cwasm` files. Wasmtime-free + sqlite-free.
compose-core = { git = "https://github.com/tegmentum/webassembly-component-orchestration.git", branch = "main" }
# Hash primitive  shared with sqlite-cas-cache so hex decoders
# in this crate don't need to round-trip through the store.
blake3 = "1.5"
tempfile = "3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CBOR codec for the sqlite-runtime compose provider — see
# host/COMPOSE-PROTOCOL.md for the wire shape.
ciborium = "0.2"
# TVM-track host wiring. As of Stage 5f the cli component itself
# is a pure SPI client (no SQLite, no tvm:memory imports). The
# tvm:memory wiring is still needed because (a) the composed
# `cli + sqlite-lib` runnable used in scenario-2 smoke imports
# tvm:memory via sqlite-lib's sqlite-pcache-tvm + sqlite-vfs-tvm,
# and (b) the host's TVM probe tests (host/tests/tvm_*) instantiate
# small components that exercise the tvm:memory contract directly.
# The host's make_run_linker + the main.rs cli runner both wire
# tvm_wasmtime::add_to_linker so those imports resolve. Sourced via a
# pinned git rev of tvm-wasm (not the submodule path) so that ChimeraDB's
# in-process build can link sqlink-host + ducklink-host against a SINGLE
# tvm-core source (both pin the same rev). See chimeradb/PLAN-inprocess.md PR1.
tvm-wasmtime = { git = "https://github.com/tegmentum/tvm-wasm.git", rev = "6f3bae38fad4addd4de1837ab151f4ac871d1dd4" }

# PLAN-cli-stages-5-6.md Stage 5c: embedded SQL function extensions
# moved from cli/Cargo.toml. Each is an optional dep + a feature
# flag; the host's register_embedded_extensions wires whichever
# are enabled at compile time. Starting with the most common ones
# (sha3, uuid, regexp, json1) as proof of concept; the remaining
# 85 follow in subsequent commits.
sha3-extension   = { path = "../extensions/sha3",   optional = true, features = ["embed"], default-features = false }
uuid-extension   = { path = "../extensions/uuid",   optional = true, features = ["embed"], default-features = false }
regexp-extension = { path = "../extensions/regexp", optional = true, features = ["embed"], default-features = false }
json1-extension  = { path = "../extensions/json1",  optional = true, features = ["embed"], default-features = false }
crc-extension   = { path = "../extensions/crc",   optional = true, features = ["embed"], default-features = false }
baseN-extension = { path = "../extensions/baseN", optional = true, features = ["embed"], default-features = false }
color-extension = { path = "../extensions/color", optional = true, features = ["embed"], default-features = false }
ean-extension     = { path = "../extensions/ean",     optional = true, features = ["embed"], default-features = false }
emoji-extension   = { path = "../extensions/emoji",   optional = true, features = ["embed"], default-features = false }
morse-extension   = { path = "../extensions/morse",   optional = true, features = ["embed"], default-features = false }
hexdump-extension   = { path = "../extensions/hexdump",   optional = true, features = ["embed"], default-features = false }
idna-extension      = { path = "../extensions/idna",      optional = true, features = ["embed"], default-features = false }
faker-extension     = { path = "../extensions/faker",     optional = true, features = ["embed"], default-features = false }
sentiment-extension = { path = "../extensions/sentiment", optional = true, features = ["embed"], default-features = false }
cron-extension      = { path = "../extensions/cron",      optional = true, features = ["embed"], default-features = false }
crypto-extension    = { path = "../extensions/crypto",    optional = true, features = ["embed"], default-features = false }
mailto-extension    = { path = "../extensions/mailto",    optional = true, features = ["embed"], default-features = false }
ssn-extension       = { path = "../extensions/ssn",       optional = true, features = ["embed"], default-features = false }
numfmt-extension    = { path = "../extensions/numfmt",    optional = true, features = ["embed"], default-features = false }
ipaddr-extension    = { path = "../extensions/ipaddr",    optional = true, features = ["embed"], default-features = false }
aba-extension        = { path = "../extensions/aba",        optional = true, features = ["embed"], default-features = false }
bic-extension        = { path = "../extensions/bic",        optional = true, features = ["embed"], default-features = false }
cusip-extension      = { path = "../extensions/cusip",      optional = true, features = ["embed"], default-features = false }
creditcard-extension = { path = "../extensions/creditcard", optional = true, features = ["embed"], default-features = false }
isin-extension       = { path = "../extensions/isin",       optional = true, features = ["embed"], default-features = false }
dns-extension        = { path = "../extensions/dns",        optional = true, features = ["embed"], default-features = false }
detect-extension     = { path = "../extensions/detect",     optional = true, features = ["embed"], default-features = false }
ical-extension       = { path = "../extensions/ical",       optional = true, features = ["embed"], default-features = false }
zorder-extension     = { path = "../extensions/zorder",     optional = true, features = ["embed"], default-features = false }
postcode-extension   = { path = "../extensions/postcode",   optional = true, features = ["embed"], default-features = false }
totype-extension     = { path = "../extensions/totype",     optional = true, features = ["embed"], default-features = false }
template-extension   = { path = "../extensions/template",   optional = true, features = ["embed"], default-features = false }
email-extension      = { path = "../extensions/email",      optional = true, features = ["embed"], default-features = false }
case-extension       = { path = "../extensions/case",       optional = true, features = ["embed"], default-features = false }
phone-extension      = { path = "../extensions/phone",      optional = true, features = ["embed"], default-features = false }
csscolor-extension   = { path = "../extensions/csscolor",   optional = true, features = ["embed"], default-features = false }
lorem-extension      = { path = "../extensions/lorem",      optional = true, features = ["embed"], default-features = false }
url-extension        = { path = "../extensions/url",        optional = true, features = ["embed"], default-features = false }
graphql-extension    = { path = "../extensions/graphql",    optional = true, features = ["embed"], default-features = false }
eval-extension       = { path = "../extensions/eval",       optional = true, features = ["embed"], default-features = false }
roman-extension      = { path = "../extensions/roman",      optional = true, features = ["embed"], default-features = false }
mac-extension        = { path = "../extensions/mac",        optional = true, features = ["embed"], default-features = false }
fileio-extension       = { path = "../extensions/fileio",       optional = true, features = ["embed"], default-features = false }
bpe-extension          = { path = "../extensions/bpe",          optional = true, features = ["embed"], default-features = false }
http-extension         = { path = "../extensions/http",         optional = true, features = ["embed"], default-features = false }
bencode-extension      = { path = "../extensions/bencode",      optional = true, features = ["embed"], default-features = false }
sqlparse-extension     = { path = "../extensions/sqlparse",     optional = true, features = ["embed"], default-features = false }
semver-extension       = { path = "../extensions/semver",       optional = true, features = ["embed"], default-features = false }
container-extension    = { path = "../extensions/container",    optional = true, features = ["embed"], default-features = false }
currency-extension     = { path = "../extensions/currency",     optional = true, features = ["embed"], default-features = false }
codecs-extension       = { path = "../extensions/codecs",       optional = true, features = ["embed"], default-features = false }
radix-extension       = { path = "../extensions/radix",     optional = true, features = ["embed"], default-features = false }
natsort-extension     = { path = "../extensions/natsort",   optional = true, features = ["embed"], default-features = false }
unitconv-extension    = { path = "../extensions/unitconv",  optional = true, features = ["embed"], default-features = false }
latlon-extension      = { path = "../extensions/latlon",    optional = true, features = ["embed"], default-features = false }
vin-extension         = { path = "../extensions/vin",       optional = true, features = ["embed"], default-features = false }
ieee754-extension     = { path = "../extensions/ieee754",   optional = true, features = ["embed"], default-features = false }
escape-extension      = { path = "../extensions/escape",    optional = true, features = ["embed"], default-features = false }
iban-extension        = { path = "../extensions/iban",      optional = true, features = ["embed"], default-features = false }
humansize-extension   = { path = "../extensions/humansize", optional = true, features = ["embed"], default-features = false }
math-extension        = { path = "../extensions/math",      optional = true, features = ["embed"], default-features = false }
compress-extension    = { path = "../extensions/compress",  optional = true, features = ["embed"], default-features = false }
bloom-extension       = { path = "../extensions/bloom",     optional = true, features = ["embed"], default-features = false }
setops-extension      = { path = "../extensions/setops",    optional = true, features = ["embed"], default-features = false }
country-extension     = { path = "../extensions/country",   optional = true, features = ["embed"], default-features = false }
onnx-extension        = { path = "../extensions/onnx",      optional = true, features = ["embed"], default-features = false }
formats-extension     = { path = "../extensions/formats",   optional = true, features = ["embed"], default-features = false }
extfns-extension      = { path = "../extensions/extfns",    optional = true, features = ["embed"], default-features = false }
vec-extension         = { path = "../extensions/vec",       optional = true, features = ["embed"], default-features = false }
time-extension        = { path = "../extensions/time",      optional = true, features = ["embed"], default-features = false }
parsers-extension     = { path = "../extensions/parsers",   optional = true, features = ["embed"], default-features = false }
geo-extension         = { path = "../extensions/geo",       optional = true, features = ["embed"], default-features = false }
decimal-extension     = { path = "../extensions/decimal",   optional = true, features = ["embed"], default-features = false }
hyperloglog-extension = { path = "../extensions/hyperloglog", optional = true, features = ["embed"], default-features = false }
count-min-extension   = { path = "../extensions/count_min", optional = true, features = ["embed"], default-features = false }
sketches-extension    = { path = "../extensions/sketches",  optional = true, features = ["embed"], default-features = false }
series-extension      = { path = "../extensions/series",    optional = true, features = ["embed"], default-features = false }
listargs-extension    = { path = "../extensions/listargs",  optional = true, features = ["embed"], default-features = false }
define-extension      = { path = "../extensions/define",    optional = true, features = ["embed"], default-features = false }
completion-extension  = { path = "../extensions/completion", optional = true, features = ["embed"], default-features = false }
trie-extension        = { path = "../extensions/trie",      optional = true, features = ["embed"], default-features = false }
pmtiles-extension     = { path = "../extensions/pmtiles",   optional = true, features = ["embed"], default-features = false }
inmem-extension       = { path = "../extensions/inmem",     optional = true, features = ["embed"], default-features = false }
changeset-extension   = { path = "../extensions/changeset", optional = true, features = ["embed"], default-features = false }
csv-extension         = { path = "../extensions/csv",       optional = true, features = ["embed"], default-features = false }
stats-extension       = { path = "../extensions/stats",     optional = true, features = ["embed"], default-features = false }
vec0-extension        = { path = "../extensions/vec0",      optional = true, features = ["embed"], default-features = false }
stdsql-extension      = { path = "../extensions/stdsql",    optional = true, features = ["embed"], default-features = false }
list-extension        = { path = "../extensions/list",      optional = true, features = ["embed"], default-features = false }

[features]
# Use the native, in-host S3 path (aws-sigv4 + reqwest) instead of the default
# resident s3-endpoint compose:dynlink/endpoint provider. Fallback/comparison
# only; slated for removal once the resident path has soaked (#106).
native-s3 = []
# Use the native, in-host HTTP path (reqwest) instead of the default resident
# http-endpoint compose:dynlink/endpoint provider. Fallback/comparison only;
# slated for removal once the resident path has soaked (#106).
native-http = []
embed-sha3   = ["dep:sha3-extension"]
embed-uuid   = ["dep:uuid-extension"]
embed-regexp = ["dep:regexp-extension"]
embed-json1  = ["dep:json1-extension"]
embed-crc = ["dep:crc-extension"]
embed-baseN = ["dep:baseN-extension"]
embed-color = ["dep:color-extension"]
embed-ean = ["dep:ean-extension"]
embed-emoji = ["dep:emoji-extension"]
embed-morse = ["dep:morse-extension"]
embed-hexdump = ["dep:hexdump-extension"]
embed-idna = ["dep:idna-extension"]
embed-faker = ["dep:faker-extension"]
embed-sentiment = ["dep:sentiment-extension"]
embed-cron = ["dep:cron-extension"]
embed-crypto = ["dep:crypto-extension"]
embed-mailto = ["dep:mailto-extension"]
embed-ssn = ["dep:ssn-extension"]
embed-numfmt = ["dep:numfmt-extension"]
embed-ipaddr = ["dep:ipaddr-extension"]
embed-aba = ["dep:aba-extension"]
embed-bic = ["dep:bic-extension"]
embed-cusip = ["dep:cusip-extension"]
embed-creditcard = ["dep:creditcard-extension"]
embed-isin = ["dep:isin-extension"]
embed-dns = ["dep:dns-extension"]
embed-detect = ["dep:detect-extension"]
embed-ical = ["dep:ical-extension"]
embed-zorder = ["dep:zorder-extension"]
embed-postcode = ["dep:postcode-extension"]
embed-totype = ["dep:totype-extension"]
embed-template = ["dep:template-extension"]
embed-email = ["dep:email-extension"]
embed-case = ["dep:case-extension"]
embed-phone = ["dep:phone-extension"]
embed-csscolor = ["dep:csscolor-extension"]
embed-lorem = ["dep:lorem-extension"]
embed-url = ["dep:url-extension"]
embed-graphql = ["dep:graphql-extension"]
embed-eval = ["dep:eval-extension"]
embed-roman = ["dep:roman-extension"]
embed-mac = ["dep:mac-extension"]
embed-fileio = ["dep:fileio-extension"]
embed-bpe = ["dep:bpe-extension"]
embed-http = ["dep:http-extension"]
embed-bencode = ["dep:bencode-extension"]
embed-sqlparse = ["dep:sqlparse-extension"]
embed-semver = ["dep:semver-extension"]
embed-container = ["dep:container-extension"]
embed-currency = ["dep:currency-extension"]
embed-codecs = ["dep:codecs-extension"]
embed-radix = ["dep:radix-extension"]
embed-natsort = ["dep:natsort-extension"]
embed-unitconv = ["dep:unitconv-extension"]
embed-latlon = ["dep:latlon-extension"]
embed-vin = ["dep:vin-extension"]
embed-ieee754 = ["dep:ieee754-extension"]
embed-escape = ["dep:escape-extension"]
embed-iban = ["dep:iban-extension"]
embed-humansize = ["dep:humansize-extension"]
embed-math = ["dep:math-extension"]
embed-compress = ["dep:compress-extension"]
embed-bloom = ["dep:bloom-extension"]
embed-setops = ["dep:setops-extension"]
embed-country = ["dep:country-extension"]
embed-onnx = ["dep:onnx-extension"]
embed-formats = ["dep:formats-extension"]
embed-extfns = ["dep:extfns-extension"]
embed-vec = ["dep:vec-extension"]
embed-time = ["dep:time-extension"]
embed-parsers = ["dep:parsers-extension"]
embed-geo = ["dep:geo-extension"]
embed-decimal = ["dep:decimal-extension"]
embed-hyperloglog = ["dep:hyperloglog-extension"]
embed-count-min = ["dep:count-min-extension"]
embed-sketches = ["dep:sketches-extension"]
embed-series = ["dep:series-extension"]
embed-listargs = ["dep:listargs-extension"]
embed-define = ["dep:define-extension"]
embed-completion = ["dep:completion-extension"]
embed-trie = ["dep:trie-extension"]
embed-pmtiles = ["dep:pmtiles-extension"]
embed-inmem = ["dep:inmem-extension"]
embed-changeset = ["dep:changeset-extension"]
embed-csv = ["dep:csv-extension"]
embed-stats = ["dep:stats-extension"]
embed-vec0 = ["dep:vec0-extension"]
embed-stdsql = ["dep:stdsql-extension"]
embed-list = ["dep:list-extension"]
# Convenience: all-embed pulls in the lot.
all-embed = [
    "embed-json1",
    "embed-regexp",
    "embed-sha3",
    "embed-uuid",
    "embed-crc",
    "embed-baseN",
    "embed-color",
    "embed-ean",
    "embed-emoji",
    "embed-morse",
    "embed-hexdump",
    "embed-idna",
    "embed-faker",
    "embed-sentiment",
    "embed-cron",
    "embed-crypto",
    "embed-mailto",
    "embed-ssn",
    "embed-numfmt",
    "embed-ipaddr",
    "embed-aba",
    "embed-bic",
    "embed-cusip",
    "embed-creditcard",
    "embed-isin",
    "embed-dns",
    "embed-detect",
    "embed-ical",
    "embed-zorder",
    "embed-postcode",
    "embed-totype",
    "embed-template",
    "embed-email",
    "embed-case",
    "embed-phone",
    "embed-csscolor",
    "embed-lorem",
    "embed-url",
    "embed-graphql",
    "embed-eval",
    "embed-roman",
    "embed-mac",
    "embed-fileio",
    "embed-bpe",
    "embed-http",
    "embed-bencode",
    "embed-sqlparse",
    "embed-semver",
    "embed-container",
    "embed-currency",
    "embed-codecs",
    "embed-radix",
    "embed-natsort",
    "embed-unitconv",
    "embed-latlon",
    "embed-vin",
    "embed-ieee754",
    "embed-escape",
    "embed-iban",
    "embed-humansize",
    "embed-math",
    "embed-compress",
    "embed-bloom",
    "embed-setops",
    "embed-country",
    "embed-onnx",
    "embed-formats",
    "embed-extfns",
    "embed-vec",
    "embed-time",
    "embed-parsers",
    "embed-geo",
    "embed-decimal",
    "embed-hyperloglog",
    "embed-count-min",
    "embed-sketches",
    "embed-series",
    "embed-listargs",
    "embed-define",
    "embed-completion",
    "embed-trie",
    "embed-pmtiles",
    "embed-inmem",
    "embed-changeset",
    "embed-csv",
    "embed-stats",
    "embed-vec0",
    "embed-stdsql",
    "embed-list",
]

[dev-dependencies]
# Used by tests to generate Ed25519 keypairs and sign artifacts so
# the host's OpenSslVerifier path can be exercised end-to-end.
# Not pulled in for the host's production crypto path  the runtime
# verifier uses openssl-wasm, this is just for fixture generation.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# PLAN-wit-value-extension.md Phase F (F5): synthesize tiny
# component-model components in-test so the contract-version guard
# can be exercised against deliberately-skewed contracts (@0.1.0,
# @2.0.0) without needing pre-built .wasm artifacts on disk. Pinned
# to the same wasm-tools branch wasmtime/wasm-tools elsewhere in
# the workspace consume.
wat = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
